CKAD/13 Sample Exam Questions/exam-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-deployment
  name: nginx-exam-deployment
  namespace: ckad-ns6
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-webserver   #метка должна совпадать с меткой в template
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx-webserver
    spec:
      containers:
      - image: nginx:1.9
        name: nginx
        resources: {}
status: {}
