CKAD/13 Sample Exam Questions/exam-storage-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 1312-pod
  namespace: ckad-1312
spec:
  containers:
  - image: nginx
    name: webserver
    volumeMounts:
      - mountPath: "/webdata"
        name: examvol
  volumes:
  - name: examvol   #рандомное придуманное имя, не ссылка на реально созданный pv
    persistentVolumeClaim:
      claimName: 1312-pvc
