CKAD/13 Sample Exam Questions/nginx-exam.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-exam
    app: webshop
  name: exam-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx-exam   #метка, по которой искать pod-ы в deployment-е
  strategy:
    rollingUpdate:
  template:
    metadata:
      labels:
        app: nginx-exam
        service: nginx
    spec:
      containers:
      - image: nginx:1.8
        name: webserver
