CKAD/13 Sample Exam Questions/pod-cm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-exam-pod
  namespace: ckad-ns2
spec:
  containers:
    - name: alpine-container
      image: alpine
      command: ["sleep", "3600"]
