CKAD/13 Sample Exam Questions/probes-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apache-pod
  namespace: ckad-ns3
spec:
  containers:
  - name: webserver
    image: httpd
    readinessProbe:
      exec:
        command: ["ls", "/usr/local/apache2/htdocs"]
      initialDelaySeconds: 10
      periodSeconds: 60
