CKAD/13 Sample Exam Questions/sidecar_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sidecar-pod
  namespace: ckad-ns3
spec:
  containers:
  - image: busybox
    name: app-source
    command: ["/bin/sh"]
    args: ["-c", "while true; do date >> /var/log/date.log; sleep 5; done"]
    volumeMounts:
    - mountPath: /var/log
      name: logs

  - image: alpine
    name: log-collector
    imagePullPolicy: IfNotPresent
    command: ["sleep", "3600"]
    volumeMounts:
    - mountPath: /var/log
      name: logs

  volumes:
  - name: logs
    hostPath:
      path: /data
